# jobworkerp-mcp-proxy

./: .gitmodules  Cargo.toml  README.md  README_ja.md  dot.env
all-in-one/: Cargo.toml
all-in-one/src/: client.rs  sse.rs  stdio.rs
proxy-server/: Cargo.toml
proxy-server/src/: jobworkerp.rs  lib.rs  tool_conversion.rs
proxy-server/src/common/: jsonrpc.rs
proxy-server/src/jobworkerp/: repository.rs
proxy-server/tests/: jobworkerp_tools.rs  tool_conversion.rs
